f-102-l02/style.css
* {
    margin: 0;
}

html {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

main {
    padding: 1rem;
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    column-gap: 1rem;
}

@media screen and (min-width: 768px) {
    main {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media screen and (min-width: 1200px) {
    main {
        grid-template-columns: repeat(4, 1fr);
    }
}

figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    background-color: #E8F0FF;
    border: 0.5rem solid #F7ACCF;
    padding: 1rem;
}

figure img {
    width: 100%;
    height: auto;
}

figcaption h2 {
    text-align: center;
    margin-bottom: 1rem;
}

